--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
     "react": "^18.1.0",
